force reload of config after two failed wbl checks SERVER-4118