s/writeback_listener.cpp
@@ -216,7 +216,7 @@ namespace mongo {
                             
                             if ( gle["code"].numberInt() == 9517 ) {
                                 log() << "writeback failed because of stale config, retrying attempts: " << attempts << endl;
-                                if( ! db->getChunkManagerIfExists( ns , true ) ){
+                                if( ! db->getChunkManagerIfExists( ns , true, attempts > 2 ) ){
                                     uassert( 15884, str::stream() << "Could not reload chunk manager after " << attempts << " attempts.", attempts <= 4 );
                                     sleepsecs( attempts - 1 );
                                 }
